# cpfw

./: .gitignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure.scan  readme.md  tags
.deps/: Condition.Po  Convert.Po  DataParser.Po  DataStore.Po  ExampleChain.Po  ExpressionPool.Po  ExpressionStrategy.Po  Handler.Po  Logic.Po  MessagePool.Po  ResponsibilityChain.Po  StrategyCalculate.Po  StrategyLogic.Po  Utils.Po  Widget.Po  main.Po  tinyxml2.Po
autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
configs/: exampleChain.xml
cpfw/: CMakeLists.txt
cpfw/base/include/: Base.h  Bundle.h  Bundle.hpp  CircleArray.hpp  Condition.h  Convert.h  DataStore.h  DataStore.hpp  ExpressionPool.h  ExpressionStrategy.h  Handler.h  Log.hpp  Message.h  MessagePool.h  MutexPool.h  ParametersBase.h  ResponsibilityChain.h  ResponsibilityChain.hpp  RingArray.hpp  RingBuffer.hpp  RingBufferManager.hpp  Singleton.hpp  State.h  StateMachine.h  StrategyCalculate.h  StrategyLogic.h  StrategyPool.h  TLV.hpp  ThreadPool.hpp  Utils.h  Utils.hpp  Widget.h
cpfw/base/include/utilities/: DumpUtils.h  MapUtils.hpp  TimeUtils.h
cpfw/base/src/: Condition.cpp  Convert.cpp  DataStore.cpp  ExpressionPool.cpp  ExpressionStrategy.cpp  Handler.cpp  MessagePool.cpp  MutexPool.cpp  ParametersBase.cpp  ResponsibilityChain.cpp  State.cpp  StateMachine.cpp  StrategyCalculate.cpp  StrategyLogic.cpp  Utils.cpp  Widget.cpp
cpfw/base/src/utilities/: DumpUtils.cpp  TimeUtils.cpp
cpfw/core/include/: Base.h  Condition.h  Convert.h  DataParser.h  DataStore.h  ExpressionPool.h  Logic.h  LogicDataParser.h  ResponsibilityChain.h  SimpleLogic.h  SimpleLogicHelper.h  StrategyCalculate.h  StrategyLogic.h  Utils.h  Widget.h
cpfw/core/src/: DataParser.cpp  DataStore.cpp  ExpressionPool.cpp  Logic.cpp  LogicDataParser.cpp  ResponsibilityChain.cpp  SimpleLogic.cpp  SimpleLogicHelper.cpp  StrategyCalculate.cpp  StrategyLogic.cpp  Utils.cpp  Widget.cpp
doc/: cpfw.drawio
examples/CircleArray/: CMakeLists.txt  CircleArrayTest.cpp
examples/LogicChain/: .ninja_deps  .ninja_log  CMakeLists.txt  ExampleChain.cpp  ExampleChain.h  exampleChain  exampleChain.xml
examples/ParametersBase/: CMakeLists.txt  ExampleParametersBase.cpp
examples/RingArray/: CMakeLists.txt  RingArrayTest.cpp
examples/RingBuffer/: CMakeLists.txt  RingBufferTest.cpp
examples/RingBufferManager/: CMakeLists.txt  RingBufferManagerTest.cpp
examples/SimpleLogic/: CMakeLists.txt  SimpleLogicExample.cpp  SimpleLogicExample.h  simpleLogic.xml
examples/Singleton/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  SingletonTest.cpp  build.ninja  cmake_install.cmake
examples/StateMachine/: CMakeLists.txt  StateMachineExample.cpp  StateMachineExample.h
examples/TLV/: CMakeLists.txt  ExampleTLV.cpp
examples/ThreadPool/: CMakeLists.txt  ThreadPoolTest.cpp
examples/include/: ExampleChain.h
examples/src/: ExampleChain.cpp  main.cpp
