AUTOMAKE_OPTIONS=foreign
bin_PROGRAMS=exampleChain
exampleChain_SOURCES= examples/src/ExampleChain.cpp \
                      cpfw/base/src/Condition.cpp \
                      cpfw/base/src/ExpressionStrategy.cpp \
                      cpfw/base/src/Widget.cpp \
                      cpfw/base/src/Handler.cpp \
                      cpfw/base/src/Utils.cpp \
                      cpfw/base/src/MessagePool.cpp \
                      cpfw/base/src/ResponsibilityChain.cpp \
                      cpfw/base/src/DataStore.cpp \
                      cpfw/core/src/Logic.cpp \
                      cpfw/core/src/DataParser.cpp \
                      external/tinyxml2/tinyxml2.cpp
AM_CPPFLAGS=-std=c++20
