#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.71])
AC_INIT([exampleChain],[0.1],[1127254428@qq.com])
AC_CONFIG_SRCDIR([cpfw/base/include/Base.h])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdint.h])
AM_INIT_AUTOMAKE(exampleChain, 0.1)
# Checks for typedefs, structures, and compiler characteristics.
AC_C_INLINE
AC_TYPE_INT32_T
AC_TYPE_UINT32_T

# Checks for library functions.
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
